alpm-types/src/snapshots/openpgp::invalid_packager@case_5_address_without_local_part.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
error: invalid Email address
 | 
 | Foobar McFooface <@mcfooface.org>
 | ~~~~~~~~~~~~~~~~~~^
 | 
 = while parsing:
   alpm packager: (Foobar McFooface <@m…)
   → invalid Email address
 = note: Local part is empty.
